add format seat